--- a/appEquipe/MainPage.xaml
+++ b/appEquipe/MainPage.xaml
@@ -4,7 +4,10 @@
              x:Class="appEquipe.MainPage"
              Shell.NavBarIsVisible="False">
 <VerticalStackLayout>
+
+
     
+
     <Button Text="Cadastro Fornecedor"
                 VerticalOptions="Center"
                 BorderWidth="2"
@@ -31,6 +34,28 @@
                 VerticalOptions="Center"
                 BorderWidth="2"
                 Clicked="IrCadastroMateriaPrima"
+                HeightRequest="50"
+                CornerRadius="25"
+                BackgroundColor="#a8b178"
+                TextColor="Black"
+                FontSize="18"
+                BorderColor="Black"/>
+
+    <Button Text="ListarMateriaPrima"
+                VerticalOptions="Center"
+                BorderWidth="2"
+                Clicked="IrListarMateriaPrima"
+                HeightRequest="50"
+                CornerRadius="25"
+                BackgroundColor="#a8b178"
+                TextColor="Black"
+                FontSize="18"
+                BorderColor="Black"/>
+    
+    <Button Text="ListarCliente"
+                VerticalOptions="Center"
+                BorderWidth="2"
+                Clicked="IrListarCliente"
                 HeightRequest="50"
                 CornerRadius="25"
                 BackgroundColor="#a8b178"
