--- a/appEquipe/CadastroMateriaPrima.xaml
+++ b/appEquipe/CadastroMateriaPrima.xaml
@@ -13,6 +13,18 @@
                                FontSize="Large" 
                                HorizontalOptions="Center" 
                                Margin="0,20,0,20"/>
+
+                        <Button Text="Voltar"
+                            VerticalOptions="Center"
+                            HorizontalOptions="Start"
+                            BorderWidth="2"
+                            Clicked="VoltarMenu"
+                            HeightRequest="50"
+                            CornerRadius="25"
+                            BackgroundColor="#acb5e3"
+                            TextColor="Black"
+                            FontSize="18"
+                            BorderColor="Black"/>
                         
                         <StackLayout>
                             <Label Text="Nome:"/>
